crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: nodes
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module_a",
            inputs: {
                "input": String {
                    direction: Input,
                    parts: [
                        Literal(
                            "hello",
                        ),
                    ],
                },
            },
        },
    },
)
