crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic-3.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"name module_a <- 42\"#)"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module_a",
            inputs: {
                "input": Numeric {
                    direction: Input,
                    value: "42",
                },
            },
        },
    },
)
