crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic-4.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"name module_a <- true\"#)"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module_a",
            inputs: {
                "input": Boolean {
                    direction: Input,
                    value: true,
                },
            },
        },
    },
)
