crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic-6.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(r#\"\n                name_a module_a <- 123\n                name_b module_b -> name_a\n            \"#)"
---
Ok(
    {
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "input": Numeric {
                    direction: Input,
                    value: "123",
                },
            },
        },
        "name_b": NodeInstruct {
            identifier: "name_b",
            module: "module_b",
            inputs: {
                "output": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "input",
                },
            },
        },
    },
)
