crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: nodes
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "module_a",
            inputs: {
                "input": String {
                    direction: Input,
                    parts: [
                        Literal(
                            "hello",
                        ),
                    ],
                },
            },
        },
    },
)
