crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_chaining-3.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(r#\"name_a module_a <- name_b module_b <- name_c module_c <- 42\"#)"
---
Ok(
    {
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "input": Relation {
                    identifier: "name_b",
                    direction: Input,
                    property: "output",
                },
            },
        },
        "name_b": NodeInstruct {
            identifier: "name_b",
            module: "module_b",
            inputs: {
                "input": Relation {
                    identifier: "name_c",
                    direction: Input,
                    property: "output",
                },
                "output": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "input",
                },
            },
        },
        "name_c": NodeInstruct {
            identifier: "name_c",
            module: "module_c",
            inputs: {
                "input": Numeric {
                    direction: Input,
                    value: "42",
                },
                "output": Relation {
                    identifier: "name_b",
                    direction: Output,
                    property: "input",
                },
            },
        },
    },
)
