crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__string_interpolation_parsing_simple.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: nodes
---
Ok(
    {
        "node": NodeInstruct {
            identifier: "node",
            module: "m",
            inputs: {
                "s": String {
                    direction: Input,
                    parts: [
                        Literal(
                            "Hello ",
                        ),
                        Interpolation(
                            Reference {
                                identifier: "config",
                                property: "name",
                            },
                        ),
                        Literal(
                            "!",
                        ),
                    ],
                },
            },
        },
    },
)
